[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Interface.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FiraCode/ttf/FiraCode-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Nodes/TextSlider.gd" type="Script" id=5]
[ext_resource path="res://Fonts/FiraCode/ttf/FiraCode-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/FiraCode/ttf/FiraCode-Medium.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="DynamicFont" id=22]
size = 20
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=29]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.148333, 0.1, 0.2, 0.784314 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxFlat" id=25]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.207843, 0.0823529, 0.411765, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=19]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.129412, 0.027451, 0.254902, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=28]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.0627451, 0.0313726, 0.180392, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.227451, 0.156863, 0.239216, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=23]
size = 24
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=35]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.615686, 0.168627, 0.337255, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=34]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.670588, 0.027451, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=36]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.47451, 0.054902, 0.211765, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=38]
size = 20
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="StyleBoxFlat" id=37]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.12549, 0.0588235, 0.203922, 1 )
border_width_bottom = 4
border_color = Color( 0.290196, 0.176471, 0.329412, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=15]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.101961, 0.0823529, 0.121569, 1 )

[sub_resource type="DynamicFont" id=24]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.12549, 0.0588235, 0.203922, 0.392157 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.12549, 0.0588235, 0.203922, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=30]
size = 40
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=18]
Button/fonts/font = SubResource( 22 )
Button/styles/disabled = SubResource( 29 )
Button/styles/focus = SubResource( 27 )
Button/styles/hover = SubResource( 25 )
Button/styles/normal = SubResource( 19 )
Button/styles/pressed = SubResource( 28 )
CategoryPanelContainer/base_type = "PanelContainer"
CategoryPanelContainer/styles/panel = SubResource( 16 )
CategoryTitleLabel/base_type = "Label"
CategoryTitleLabel/fonts/font = SubResource( 23 )
DeleteButton/base_type = "Button"
DeleteButton/styles/disabled = null
DeleteButton/styles/focus = null
DeleteButton/styles/hover = SubResource( 35 )
DeleteButton/styles/normal = SubResource( 34 )
DeleteButton/styles/pressed = SubResource( 36 )
Label/fonts/font = SubResource( 22 )
LineEdit/fonts/font = SubResource( 38 )
LineEdit/styles/focus = SubResource( 39 )
LineEdit/styles/normal = SubResource( 37 )
PanelContainer/styles/panel = SubResource( 15 )
SubTitleLabel/base_type = "Label"
SubTitleLabel/fonts/font = SubResource( 24 )
TextSlider/constants/margin_x = 16
TextSlider/styles/background_style = SubResource( 21 )
TextSlider/styles/fill_style = SubResource( 20 )
TitleLabel/base_type = "Label"
TitleLabel/fonts/font = SubResource( 30 )

[sub_resource type="StyleBoxEmpty" id=17]
content_margin_left = 8.0
content_margin_right = 8.0

[sub_resource type="Theme" id=33]

[sub_resource type="StyleBoxFlat" id=32]
content_margin_left = 64.0
content_margin_right = 64.0
content_margin_top = 64.0
content_margin_bottom = 64.0
bg_color = Color( 0.101961, 0.0823529, 0.121569, 0.501961 )

[sub_resource type="AudioStreamGenerator" id=1]
buffer_length = 0.05

[node name="Interface" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 31 )
script = ExtResource( 1 )

[node name="UI" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 18 )

[node name="VBox" type="VBoxContainer" parent="UI"]
margin_left = 16.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 592.0

[node name="Title" type="Label" parent="UI/VBox"]
margin_right = 992.0
margin_bottom = 50.0
theme_type_variation = "TitleLabel"
text = "Engine Soud Generator"

[node name="Sep" type="Control" parent="UI/VBox"]
margin_top = 54.0
margin_right = 992.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 16 )

[node name="Engine" type="ScrollContainer" parent="UI/VBox"]
margin_top = 74.0
margin_right = 992.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_vertical = 100

[node name="Panel" type="PanelContainer" parent="UI/VBox/Engine"]
margin_top = -100.0
margin_right = 980.0
margin_bottom = 1643.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 17 )

[node name="VBox" type="VBoxContainer" parent="UI/VBox/Engine/Panel"]
margin_left = 8.0
margin_right = 972.0
margin_bottom = 1743.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="Options" type="PanelContainer" parent="UI/VBox/Engine/Panel/VBox"]
margin_right = 964.0
margin_bottom = 277.0
size_flags_horizontal = 3
theme_type_variation = "CategoryPanelContainer"

[node name="VBox" type="VBoxContainer" parent="UI/VBox/Engine/Panel/VBox/Options"]
margin_left = 8.0
margin_top = 8.0
margin_right = 956.0
margin_bottom = 269.0

[node name="Title" type="Label" parent="UI/VBox/Engine/Panel/VBox/Options/VBox"]
margin_right = 948.0
margin_bottom = 31.0
theme_type_variation = "CategoryTitleLabel"
text = "Options"

[node name="ResetConfig" type="Button" parent="UI/VBox/Engine/Panel/VBox/Options/VBox"]
margin_top = 35.0
margin_right = 948.0
margin_bottom = 77.0
text = "Reset Engine Config"

[node name="SaveConfig" type="Button" parent="UI/VBox/Engine/Panel/VBox/Options/VBox"]
margin_top = 81.0
margin_right = 948.0
margin_bottom = 123.0
text = "Save Engine Config"

[node name="LoadConfig" type="Button" parent="UI/VBox/Engine/Panel/VBox/Options/VBox"]
margin_top = 127.0
margin_right = 948.0
margin_bottom = 169.0
text = "Load Engine Config"

[node name="ResetBuffer" type="Button" parent="UI/VBox/Engine/Panel/VBox/Options/VBox"]
margin_top = 173.0
margin_right = 948.0
margin_bottom = 215.0
text = "Reset Audio Buffer (use if getting resonanting sounds)"

[node name="Export" type="Button" parent="UI/VBox/Engine/Panel/VBox/Options/VBox"]
margin_top = 219.0
margin_right = 948.0
margin_bottom = 261.0
text = "Export Engine Audio"

[node name="Mix" type="PanelContainer" parent="UI/VBox/Engine/Panel/VBox"]
margin_top = 301.0
margin_right = 964.0
margin_bottom = 614.0
size_flags_horizontal = 3
theme_type_variation = "CategoryPanelContainer"

[node name="VBox" type="VBoxContainer" parent="UI/VBox/Engine/Panel/VBox/Mix"]
margin_left = 8.0
margin_top = 8.0
margin_right = 956.0
margin_bottom = 305.0

[node name="Title" type="Label" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_right = 948.0
margin_bottom = 31.0
theme_type_variation = "CategoryTitleLabel"
text = "Mix"

[node name="RPM" type="Control" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_top = 35.0
margin_right = 948.0
margin_bottom = 69.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Engine RPM: 4000 (100 hz)"
min_value = 300.0
max_value = 20000.0
value = 4000.0

[node name="MasterVolume" type="Control" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_top = 73.0
margin_right = 948.0
margin_bottom = 107.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Master Volume: 50%"
max_value = 3.0
value = 0.5
step = 0.0

[node name="IntakeVolume" type="Control" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_top = 111.0
margin_right = 948.0
margin_bottom = 145.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Intake Volume: 50%"
max_value = 1.0
value = 0.5
step = 0.0

[node name="ExhaustVolume" type="Control" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_top = 149.0
margin_right = 948.0
margin_bottom = 183.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Exhaust Volume: 50%"
max_value = 1.0
value = 0.5
step = 0.0

[node name="VibrationsVolume" type="Control" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_top = 187.0
margin_right = 948.0
margin_bottom = 221.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Vibrations Volume: 50%"
max_value = 1.0
value = 0.5
step = 0.0

[node name="LowPassFreq" type="Control" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_top = 225.0
margin_right = 948.0
margin_bottom = 259.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Lowpass-Filter Frequency: 1024 HZ"
min_value = 0.1
max_value = 400.0
value = 0.5
step = 0.0

[node name="SampleRate" type="Control" parent="UI/VBox/Engine/Panel/VBox/Mix/VBox"]
margin_top = 263.0
margin_right = 948.0
margin_bottom = 297.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Sample Rate: 44100 HZ"
min_value = 10000.0
max_value = 50000.0
value = 44100.0
step = 10.0

[node name="EngineParams" type="PanelContainer" parent="UI/VBox/Engine/Panel/VBox"]
margin_top = 638.0
margin_right = 964.0
margin_bottom = 1027.0
size_flags_horizontal = 3
theme_type_variation = "CategoryPanelContainer"

[node name="VBox" type="VBoxContainer" parent="UI/VBox/Engine/Panel/VBox/EngineParams"]
margin_left = 8.0
margin_top = 8.0
margin_right = 956.0
margin_bottom = 381.0

[node name="Title" type="Label" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_right = 948.0
margin_bottom = 31.0
theme_type_variation = "CategoryTitleLabel"
text = "Engine Parameters"

[node name="VibrationsLowPassFreq" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 35.0
margin_right = 948.0
margin_bottom = 69.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Vibrations Lowpass-Filter Frequency: 92.34 HZ"
min_value = 10.0
max_value = 8000.0
value = 4000.0
step = 0.0

[node name="IntakeNoiseFactor" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 73.0
margin_right = 948.0
margin_bottom = 107.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Intake Noise Factor: 0.5"
max_value = 3.0
value = 0.5
step = 0.0

[node name="IntakeNoiseFrequency" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 111.0
margin_right = 948.0
margin_bottom = 145.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Intake Noise Frequency: 100 HZ"
min_value = 10.0
max_value = 1000.0
value = 0.5
step = 0.0

[node name="IntakeNoiseLowPassFreq" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 149.0
margin_right = 948.0
margin_bottom = 183.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Intake Noise Lowpass-Filter Frequency 10937 HZ"
min_value = 10.0
max_value = 8000.0
value = 4000.0
step = 0.0

[node name="IntakeValveShift" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 187.0
margin_right = 948.0
margin_bottom = 221.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Intake Valve Cam Shift: 0.04 Cycles"
min_value = -0.5
max_value = 0.5
value = 0.0
step = 0.0

[node name="ExhaustValveShift" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 225.0
margin_right = 948.0
margin_bottom = 259.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Exhaust Valve Cam Shift: 0.00 Cycles"
min_value = -0.5
max_value = 0.5
value = 0.0
step = 0.0

[node name="CrankshaftFluctuationFactor" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 263.0
margin_right = 948.0
margin_bottom = 297.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Crankshaft Fluctuation Factor: 0.5"
max_value = 2.5
value = 1.0
step = 0.0

[node name="CrankshaftFluctuationFrequency" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 301.0
margin_right = 948.0
margin_bottom = 335.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Intake Noise Frequency: 100 HZ"
min_value = 10.0
max_value = 1000.0
value = 0.5
step = 0.0

[node name="CrankshaftFluctuationLowPassFreq" type="Control" parent="UI/VBox/Engine/Panel/VBox/EngineParams/VBox"]
margin_top = 339.0
margin_right = 948.0
margin_bottom = 373.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Crankshaft Fluctuation Lowpass-Filter Frequency: 57 HZ"
min_value = 10.0
max_value = 8000.0
value = 4000.0
step = 0.0

[node name="MufflerParams" type="PanelContainer" parent="UI/VBox/Engine/Panel/VBox"]
margin_top = 1051.0
margin_right = 964.0
margin_bottom = 1347.0
size_flags_horizontal = 3
theme_type_variation = "CategoryPanelContainer"

[node name="VBox" type="VBoxContainer" parent="UI/VBox/Engine/Panel/VBox/MufflerParams"]
margin_left = 8.0
margin_top = 8.0
margin_right = 956.0
margin_bottom = 288.0

[node name="Title" type="Label" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_right = 948.0
margin_bottom = 31.0
theme_type_variation = "CategoryTitleLabel"
text = "Muffler Parameters"

[node name="StraightPipeExtractorRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 35.0
margin_right = 948.0
margin_bottom = 69.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Straight Pipe Extractor-Side Reflectivity: 0.06"
min_value = -1.0
max_value = 1.0
value = 0.5
step = 0.0

[node name="StraightPipeMufflerRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 73.0
margin_right = 948.0
margin_bottom = 107.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Straight Pipe Muffler-Side Reflectivity: 0.00"
min_value = -1.0
max_value = 1.0
value = 0.5
step = 0.0

[node name="StraightPipeLength" type="Control" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 111.0
margin_right = 948.0
margin_bottom = 145.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Straight Pipe Length: 2.10 Meters"
min_value = 0.1
max_value = 3.0
value = 2.0
step = 0.0

[node name="MufflerElementsOutputRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 149.0
margin_right = 948.0
margin_bottom = 183.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Muffler Elements Exhaust-Side Reflectivity: -0.14"
min_value = -1.0
max_value = 0.3
value = -0.1
step = 0.0

[node name="Sep" type="Control" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 187.0
margin_right = 948.0
margin_bottom = 195.0
rect_min_size = Vector2( 0, 8 )

[node name="Elements" type="Label" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 199.0
margin_right = 948.0
margin_bottom = 230.0
theme_type_variation = "SubTitleLabel"
text = "Elements:"

[node name="MufflerElements" type="VBoxContainer" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 234.0
margin_right = 948.0
margin_bottom = 234.0

[node name="AddMufflerElement" type="Button" parent="UI/VBox/Engine/Panel/VBox/MufflerParams/VBox"]
margin_top = 238.0
margin_right = 244.0
margin_bottom = 280.0
size_flags_horizontal = 0
text = "Add Muffler Element"
align = 0

[node name="CylinderParams" type="PanelContainer" parent="UI/VBox/Engine/Panel/VBox"]
margin_top = 1371.0
margin_right = 964.0
margin_bottom = 1743.0
size_flags_horizontal = 3
theme_type_variation = "CategoryPanelContainer"

[node name="VBox" type="VBoxContainer" parent="UI/VBox/Engine/Panel/VBox/CylinderParams"]
margin_left = 8.0
margin_top = 8.0
margin_right = 956.0
margin_bottom = 364.0

[node name="Title" type="Label" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_right = 948.0
margin_bottom = 31.0
theme_type_variation = "CategoryTitleLabel"
text = "Cylinder Parameters"

[node name="OpenedIntakeValveRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 35.0
margin_right = 948.0
margin_bottom = 69.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Opened Intake Valve Cavity Reflectivity: 0.01"
min_value = -1.0
max_value = 1.0
value = 0.0
step = 0.0

[node name="ClosedIntakeValveRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 73.0
margin_right = 948.0
margin_bottom = 107.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Closed Intake Valve Cavity Reflectivity: 1.0"
min_value = -1.0
max_value = 1.0
value = 1.0
step = 0.0

[node name="OpenedExhaustValveRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 111.0
margin_right = 948.0
margin_bottom = 145.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Opened Exhaust Valve Cavity Reflectivity: 0.00"
min_value = -1.0
max_value = 1.0
value = 0.0
step = 0.0

[node name="ClosedExhaustValveRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 149.0
margin_right = 948.0
margin_bottom = 183.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Closed Exhaust Valve Cavity Reflectivity: 0.71"
min_value = -1.0
max_value = 1.0
value = 0.7
step = 0.0

[node name="IntakeOpenEndRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 187.0
margin_right = 948.0
margin_bottom = 221.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Intake-Cavity Open End Reflectivity: -0.76"
min_value = -1.0
max_value = 1.0
value = 0.8
step = 0.0

[node name="ExtractorOpenEndRefl" type="Control" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 225.0
margin_right = 948.0
margin_bottom = 259.0
size_flags_horizontal = 3
script = ExtResource( 5 )
text = "Extractor-Cavity Straight Pipe Side Reflectivity: 0.00"
min_value = -1.0
max_value = 1.0
value = 0.0
step = 0.0

[node name="Sep" type="Control" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 263.0
margin_right = 948.0
margin_bottom = 271.0
rect_min_size = Vector2( 0, 8 )

[node name="Elements" type="Label" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 275.0
margin_right = 948.0
margin_bottom = 306.0
theme_type_variation = "SubTitleLabel"
text = "Elements:"

[node name="CylinderElements" type="VBoxContainer" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 310.0
margin_right = 948.0
margin_bottom = 310.0

[node name="AddCylinderElement" type="Button" parent="UI/VBox/Engine/Panel/VBox/CylinderParams/VBox"]
margin_top = 314.0
margin_right = 256.0
margin_bottom = 356.0
size_flags_horizontal = 0
text = "Add Cylinder Element"
align = 0

[node name="Popups" type="PanelContainer" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 33 )
custom_styles/panel = SubResource( 32 )

[node name="SaveConfig" type="FileDialog" parent="Popups"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "Save A Engine Config File"
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.tres;Engine Config Resources" )

[node name="LoadConfig" type="FileDialog" parent="Popups"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "Load A Engine Config File"
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.tres;Engine Config Resources" )

[node name="MessageDialog" type="ConfirmationDialog" parent="Popups"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "An error occurred"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Popups"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
window_title = "An error occurred"
dialog_hide_on_ok = false

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
